--- a/report/main.tex
+++ b/report/main.tex
@@ -95,7 +95,7 @@ In this project the user can find missing people by search with the old pictures
 	
 	\section{project description}
 	This is a python desktop application, it applies the Pattern Recognition and	Digital Image Processing
-	 techniques to analyze, design, and implement multimedia retrieval system, where the media that we are going to use are the images . In CBIR we have implemented many techniques belong  Pattern Recognition and Digital Image Processing and AI techniques in retrieval and face Recognition.
+	 techniques to analyze, design, and implement multimedia retrieval system, where the media that we are going to use are the images .we have implemented many techniques belong  Pattern Recognition and Digital Image Processing and AI techniques in retrieval and face Recognition.
 	 .
 	\begin{figure}[H]
 		\centering
@@ -114,12 +114,7 @@ In this project the user can find missing people by search with the old pictures
 	\section{Detailed analysis}
 	This project deals with Content Based video Retrieval (CBVR)and Content Based Image Retrieval(CBIR). 
 	For the CBIR, the adopted methods are color-based technique, texture-based technique, and shape-based technique. and then after the user select a technique and provide the image that he/she want to search for. The program extract features of the images dataset and save it then extract the features of the input image and compare the image with etracted feature database using the selected technique and by chi-squared distance. The chi-squared distance is distance measures that used to measures dissimilarity between two histograms. the following is an analysis for adopted technique in CBIR.
-	\begin{enumerate}
-		\item color based technique: searching for images using the color thy contain is widely used technique here we compute the distance based on the color using color histogram.
-	
 
-	
-	\end{enumerate}
 some distance that we used to measure similarity 
 \begin{itemize}
 	\item Absolute Distance \\
@@ -193,7 +188,6 @@ program.
 		\label{System architecture class-diagram}
 	\end{figure}
 
-	\section{System architecture}
 \begin{figure}[H]
 	\centering
 	\includegraphics[width=140mm,height=80mm]{fig/23.png}
@@ -254,12 +248,62 @@ program.
 	
 	\pagebreak
 	\section{Testing scenarios and results}
-
+	\begin{figure}[H]
+		\centering
+		\includegraphics[width=120mm,height=60mm]{fig/17.png}
+		%\caption{image feature exract diagram }
+		%\label{image feature exract diagram}
+	\end{figure}
 	
-
-
-		
-
+	
+	\begin{figure}[H]
+	\centering
+	\includegraphics[width=120mm,height=60mm]{fig/18.png}
+	%\caption{image feature exract diagram }
+	%\label{image feature exract diagram}
+\end{figure}
+	\begin{figure}[H]
+	\centering
+	\includegraphics[width=120mm,height=60mm]{fig/14.png}
+	%\caption{image feature exract diagram }
+	%\label{image feature exract diagram}
+\end{figure}
+			\begin{figure}[H]
+			\centering
+			\includegraphics[width=120mm,height=60mm]{fig/15.png}
+			%\caption{image feature exract diagram }
+			%\label{image feature exract diagram}
+		\end{figure}
+	\begin{figure}[H]
+	\centering
+	\includegraphics[width=120mm,height=60mm]{fig/16.png}
+	%\caption{image feature exract diagram }
+	%\label{image feature exract diagram}
+\end{figure}
+	\begin{figure}[H]
+	\centering
+	\includegraphics[width=120mm,height=60mm]{fig/10.png}
+	%\caption{image feature exract diagram }
+	%\label{image feature exract diagram}
+\end{figure}
+	\begin{figure}[H]
+	\centering
+	\includegraphics[width=120mm,height=60mm]{fig/11.png}
+	%\caption{image feature exract diagram }
+	%\label{image feature exract diagram}
+\end{figure}
+	\begin{figure}[H]
+	\centering
+	\includegraphics[width=120mm,height=60mm]{fig/12.png}
+	%\caption{image feature exract diagram }
+	%\label{image feature exract diagram}
+\end{figure}
+	\begin{figure}[H]
+	\centering
+	\includegraphics[width=120mm,height=60mm]{fig/13.png}
+	%\caption{image feature exract diagram }
+	%\label{image feature exract diagram}
+\end{figure}
 	\pagebreak
 	\section{End user guide}
 	\begin{enumerate}
