--- a/report/main.tex
+++ b/report/main.tex
@@ -310,19 +310,39 @@ program.
 	\section{End user guide}
 	\begin{enumerate}
 		\item This is the primitive user interface.
-		for choose the images services click on imagesearch tab or if needed to query for videos videosearch tab.
-		
+			\begin{figure}[H]
+			\centering
+			\includegraphics[width=120mm,height=60mm]{fig/00.png}
+			%\caption{image feature exract diagram }
+			%\label{image feature exract diagram}
+		\end{figure}
 		
 	\pagebreak
-	\item before to go in query we need to build database first so go from FILE chose updateImageDB
+	\item before to go in query we need to build database first so go from  updateDB
 			
-	
+		\begin{figure}[H]
+		\centering
+		\includegraphics[width=120mm,height=60mm]{fig/01.png}
+		%\caption{image feature exract diagram }
+		%\label{image feature exract diagram}
+	\end{figure}
 		\item 	It may take a time and give you alert message for waiting.
-
+	\begin{figure}[H]
+	\centering
+	\includegraphics[width=120mm,height=60mm]{fig/2.png}
+	%\caption{image feature exract diagram }
+	%\label{image feature exract diagram}
+\end{figure}
 	
 	
 	\pagebreak
 			\item 	When the database is finished updating, a message Database Status will appear.
+		\begin{figure}[H]
+		\centering
+		\includegraphics[width=120mm,height=60mm]{fig/3.png}
+		%\caption{image feature exract diagram }
+		%\label{image feature exract diagram}
+	\end{figure}
 	
 	
 	
@@ -331,48 +351,84 @@ program.
 	
 	
 	
-	
-		\item now we can search for any image we want From Browse choose Image ex Image of eyes and choose from Image Query the type of search you want like color based , texture based or shaped based. 
+		\item now we can search for any image we want From Browse choose Image ex Image. 
 		
-		
+			\begin{figure}[H]
+			\centering
+			\includegraphics[width=120mm,height=60mm]{fig/4.png}
+			%\caption{image feature exract diagram }
+			%\label{image feature exract diagram}
+		\end{figure}
 
 
 \pagebreak
-		\item 	to get the result Click on Retrieve button and the result will appear in the area for displaying results, and when you click at any result image it will be  standalone
-	
+		\item 	to get the result Click on search button and the result will appear in the area for displaying results, and when you click at any result image it will be  standalone
+		\begin{figure}[H]
+		\centering
+		\includegraphics[width=120mm,height=60mm]{fig/05.png}
+		%\caption{image feature exract diagram }
+		%\label{image feature exract diagram}
+	\end{figure}
 
 
 	
-	\item to begin search for videos we need first build video database
-	so From file click on UpdateVideoDB.
+	\item to enter information to image click to add INFO.
 		
-		 
+		 	\begin{figure}[H]
+		 	\centering
+		 	\includegraphics[width=120mm,height=60mm]{fig/06.png}
+		 	%\caption{image feature exract diagram }
+		 	%\label{image feature exract diagram}
+		 \end{figure}
 	
 	
 	\pagebreak
-		\item 	It may take a time and give you alert message for waiting.
+		\item 	another page will appear to enter information in diffrant fields.
+			\begin{figure}[H]
+			\centering
+			\includegraphics[width=60mm,height=60mm]{fig/7.png}
+			%\caption{image feature exract diagram }
+			%\label{image feature exract diagram}
+		\end{figure}
 	
-	
-	
-	
-	\item 	When the database is finished updating, a message Database Status will appear.
-	
-\pagebreak
-		\item to begin search task we can user either To search on the word belong video from subtitle or using keyframes 
-	
-	
-	
-		\item 	Write the Keyword you want to search it in the video in search By Keyword.
-	
+		\begin{figure}[H]
+		\centering
+		\includegraphics[width=60mm,height=60mm]{fig/09.png}
+		%\caption{image feature exract diagram }
+		%\label{image feature exract diagram}
+	\end{figure}
+		\begin{figure}[H]
+		\centering
+		\includegraphics[width=60mm,height=60mm]{fig/08.png}
+		%\caption{image feature exract diagram }
+		%\label{image feature exract diagram}
+	\end{figure}
+		\begin{figure}[H]
+		\centering
+		\includegraphics[width=50mm,height=60mm]{fig/07.png}
+		%\caption{image feature exract diagram }
+		%\label{image feature exract diagram}
+	\end{figure}
+	\begin{figure}[H]
+	\centering
+	\includegraphics[width=60mm,height=50mm]{fig/6.png}
+	%\caption{image feature exract diagram }
+	%\label{image feature exract diagram}
+\end{figure}
+	\begin{figure}[H]
+	\centering
+	\includegraphics[width=60mm,height=50mm]{fig/04.png}
+	%\caption{image feature exract diagram }
+	%\label{image feature exract diagram}
+\end{figure}
+	\item 	When finshed  entering info , a message Status will appear.
+		\begin{figure}[H]
+		\centering
+		\includegraphics[width=60mm,height=20mm]{fig/8.png}
+		%\caption{image feature exract diagram }
+		%\label{image feature exract diagram}
+	\end{figure}
 
-\pagebreak
-		\item 	Click on keywords search and the result will appear in the result displaying.
-
-
-		\item if we want to search using keyframes we click on video search tab and from browse chose the video.
-			
-		\pagebreak
-				\item 	Click on Retrieve and the result will appear in the result displaying.
 						
 	\end{enumerate}
 \pagebreak
